@@ -2,6 +2,8 @@
 	+ Show warning when accesing the UI with unsupported browsers
 	+ Add disableApparmorProfile to EBox::Module::Service
 	+ Bug fix: add missing use
+	+ Bug fix: Make EventDaemon more robust against malformed sent
+	  events by only accepting EBox::Event objects
 1.3.8
 	+ Bug fix: fixed order in EBox::Global::modified modules. Now
 	  Global and Backup use the same method to order the module list
